2002-11-10  Nick Garnett  <nickg@ecoscentric.com>

	* src/fio.h: Added macros to deal with signal handling. These will
	call into the POSIX package if it is present, but are null if it
	is not.

	* src/select.cxx: Renamed original select() to cyg_pselect() and
	added select() and pselect() routine from POSIX-200X to call
	it. Reorganized code a little and added calls to macros to deal
	with signal delivery and detection.

	* cdl/fileio.cdl: 
	* tests/pselect.c: New test added to verify the signal masking and
	delivery behaviour of pselect().

	* tests/select.c: Fixed up some printfs to make it a little tidier.

2002-11-03  Gary Thomas  <gthomas@ecoscentric.com>

	* src/io.cxx: 
	* cdl/fileio.cdl: Add readv()/writev() support.

2002-08-08  Nick Garnett  <nickg@calivar.demon.co.uk>

	* src/select.cxx (select): Changed mechanism for calculating
	select timeout to avoid possible race conditions between this code
	and the timer DSR.

2002-05-29  Jesper Skov  <jskov@redhat.com>

	* tests/fileio1.c: Removed strcat definition. Rely on string.h to
	provide it.

2002-05-28  Jonathan Larmour  <jlarmour@redhat.com>

	* include/limits.h (NAME_MAX): Increase default to 64.
	* cdl/fileio.cdl: Set CYGBLD_ISO_NAME_MAX_HEADER.

2002-04-11  Nick Garnett  <nickg@redhat.com>

	* doc/fileio.sgml: Added a section on writing a new
	filesystem. This probably still needs more work, but it's better
	than nothing.

2002-04-05  Nick Garnett  <nickg@redhat.com>

	* src/devfs.cxx: Changed test for EAGAIN in dev_fo_read() and
	dev_fo_write() to negate value first. 

2002-03-07  Nick Garnett  <nickg@redhat.com>

	* doc/fileio.sgml: Added this file to contain documentation on
	this package.

2002-02-04  Gary Thomas  <gthomas@redhat.com>

	* tests/socket.c (main): 
	* tests/select.c (main): sin_len field must be set.

2002-01-29  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/fileio.cdl: Actually, don't bother to build testfs.c at all.

2002-01-29  Jesper Skov  <jskov@redhat.com>
